# fedi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
aptool/: cli.py  main.py  utils.py
aptool/commands/: get.py  nodeinfo.py  post.py  webfinger.py
fedi/: cli.py  config.py  exceptions.py  main.py  utils.py
fedi/commands/: nodeinfo.py  webfinger.py
fedi/commands/ap/: __init__.py  get.py  monitor.py  post.py
fedi/commands/mastodon/: __init__.py  instance.py  timeline.py
feditool/: cli.py  config.py  main.py  utils.py
feditool/commands/: nodeinfo.py  webfinger.py
feditool/commands/ap/: __init__.py  get.py  monitor.py  post.py
