[tool.poetry]
name = "aptool"
version = "0.1.0"
description = ""
authors = ["Steve Bate <svc-github@stevebate.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.6"
jinja2 = "^3.1.2"
httpx = "^0.24.1"
pygments = "^2.15.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.280"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aptool = "aptool.main:main"
